# ircd-hybrid-6-cvs

./: .cvsignore  ChangeLog  Hybrid-team  INSTALL  LICENSE  Makefile.in  README.FIRST  README.HYBRID6.1-CHANGES  README.HYBRID6.2-CHANGES  README.hybrid  README.small_nets  RELNOTES  TODO  configure  configure.in  opers.txt
adns/: .depend  Makefile.in  adns.h  check.c  dlist.h  event.c  general.c  internal.h  parse.c  poll.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
autoconf/: acconfig.h  config.guess  config.sub  configure.in  install-sh
contrib/: README
doc/: CIDR.txt  ChangeLog.old  ChangeLog.th  ETRACE.txt  INDEX  Makefile  Manual  README.openssl  Tao-of-IRC.940110  cryptlink.txt  encap.txt  encryption.txt  example.conf  example.conf.trillian  ircd.8  mtrie.txt  newcluster.txt  operguide.txt  opermyth.txt  server-version-info  simple.conf  ts5.txt  yline.txt
doc/ircd.conf/: README  ilines.conf  ircd.conf  ispoof.conf  olines.conf  ports.conf  qlines.conf  servers.conf  xlines.conf  ylines.conf
doc/old/: example.conf.trillian
include/: blalloc.h  bsd.h  cdefs.h  channel.h  class.h  client.h  common.h  config.h  config.h.dist  dbuf.h  defs.h  dline_conf.h  fdlist.h  fileio.h  flud.h  h.h  hash.h  inet.h  irc_string.h  ircd.h  ircd_defs.h  ircd_signal.h  list.h  listener.h  m_commands.h  m_encap.h  m_gline.h  m_info.h  m_kline.h  m_operspylog.h  m_sinfo.h  m_whowas.h  match.h  motd.h  msg.h  mtrie_conf.h  nameser.h  numeric.h  oratime.h  packet.h  (+27 more)
src/: .cvsignore  .depend  Makefile.in  adns.c  blalloc.c  bsd.c  channel.c  class.c  client.c  dbuf.c  defs  dline_conf.c  fdlist.c  fileio.c  flud.c  hash.c  inet_addr.c  irc_string.c  ircd.c  ircd_signal.c  ircsprintf.c  list.c  listener.c  m_admin.c  m_away.c  m_capab.c  m_close.c  m_connect.c  m_cryptauth.c  m_cryptlink.c  m_cryptserv.c  m_die.c  m_encap.c  m_error.c  m_etrace.c  m_gline.c  m_help.c  m_htm.c  m_info.c  m_ison.c  (+77 more)
tools/: .cvsignore  Makefile.in  README  buildm4  chkconf.c  encspeed.c  fixklines.c  install_ircd  ircd_start.c  klineParse.c  mkconf  mkkeypair  mkpasswd.c  start_ircd.c  untabify  viconf.c
